# gershgorin-harlim-majda-2010

./: .gitignore  CMakeLists.txt  README.md
docs/: DocumentationFormatting.sty  MathTypesetting.sty  README.md  acknowledgements.tex  covAb.tex  covAconjgb.tex  covAgamma.tex  covB.conjgb.tex  covBb.tex  covBgamma.tex  covCb.tex  covCconjgb.tex  covCgamma.tex  covJstJrt.tex  covb.gamma.tex  covbconjgb.tex  covbsJrt.tex  covbsJst.tex  covbsbr.tex  covbsconjgbr.tex  covbsgammat.tex  covgammaJt0t.tex  covgammatJst.tex  covu0Jst.tex  covu0Jt0t.tex  covu0bs.tex  covub.tex  covuconjgb.tex  covuconjgu.tex  covugamma.tex  exactstats.tex  future.tex  ghm10_system.tex  introduction.tex  main.aux  main.blg  main.out  main.tex  main.toc  meanA2.tex  (+26 more)
src/: CMakeLists.txt  README.md  kinds.h.in  main.f90  ver.h.in
src/det_forcing/: CMakeLists.txt  README.md  det_forcing.f90
src/finalize/: CMakeLists.txt  README.md  finalize.f90
src/initialize/: CMakeLists.txt  README.md  initialize.f90
src/input/: CMakeLists.txt  NAMELIST.in  README.md
src/time_stepper/: CMakeLists.txt  README.md  adaptive_backward_euler.f90  adaptive_forward_euler.f90  backward_euler.f90  forward_euler.f90  time_stepper.f90  trapezoidal_analytic.f90
src/utils/: CMakeLists.txt  README.md  netcdf_utils.f90  rng_utils.f90  utils.f90
src/write_output/: CMakeLists.txt  README.md  write_output.f90
tools/: README.md  main.py  plot.nb  plot.py  stats.py
